# svelt

./: .gitignore  Cargo.toml  README.md  README.npm.md  install.js  package-lock.json  package.json
.github/workflows/: rust-linux.yml  rust-windows.yml  rust.yml
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: installation.md  intro.md
docs/docs/commands/: _category_.json  basic-commands.md  deploy-your-site.md  init-project.md  schematics.md  toolkits.md
docs/src/components/HomepageFeatures/: index.js
docs/src/css/: custom.css
docs/src/pages/: index.js
src/: cli.rs  commands.rs  main.rs
src/cli/: help.rs  project_creation.rs  version_check.rs
src/controller/: cli.rs  mod.rs
src/controller/create/: create.rs  match_schematic.rs  mod.rs  project_creation.rs
src/controller/create/schematics/: component.rs  error.rs  layout.rs  mod.rs  page.rs  param.rs  script.rs  server.rs  service.rs  store.rs  style.rs
src/controller/help/: help.rs
src/controller/init/: add_ui_toolkit.rs  mod.rs  project_creation.rs
src/controller/init/build_toolkit/: mod.rs
src/controller/init/dev_toolkit/: husky.rs  mod.rs
src/controller/init/test_toolkit/: mod.rs
src/controller/init/ui_toolkit/: flowbite.rs  mod.rs  tailwind.rs
src/controller/npm/: install.rs  mod.rs  run.rs  start.rs  uninstall.rs  update.rs
src/controller/utils/: path_utils.rs
src/models/: cli.rs  commands.rs  mod.rs  schematic.rs
src/utils/: is_svelte_project.rs  mod.rs
