[package]
name = "svelte-cli"
version = "0.1.0"
description = "A command-line tool to simplify development with Svelte, offering utilities for automation, optimization, and more"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
