[package]
name = "svelt"
version = "0.1.2"
edition = "2021"

[dependencies]
cliclack = "0.3.5"
log = "0.4.22"
console = "0.15.8"
serde_json = "1.0.132"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"

[build]
target = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]